2011-08-05  Charlie Zender  <zender@uci.edu>

	* Add in_nomismatch.cdl to work around strict ncgen errors

2011-08-02  Charlie Zender  <zender@uci.edu>

	* Prototype nco4_inq() function to replace nco_inq()

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8:
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Add grp_id to nm_id_sct

	* Fix NUL-termination problem with var_nm_fll in loop

	* Fix offset of group variables into global array

	* Fix function name in nc_inq_grpname_len()

2011-08-01  Charlie Zender  <zender@uci.edu>

	* Fix incorrect pointer in nco_grp_stk_pop()

	* Fix ininite recursion in stack memory cleanup

	* Fix off-by-one error in nco_inq_grps_full()

	* Fix incorrect reference to grp_id instead of grp_id_crr

	* Fix off-by-one error in nco_grp_stk_pop()

	* Add in_grp.cdl to test group functionality

2011-07-31  Charlie Zender  <zender@uci.edu>

	* Finish group iterators and nco_var4_lst_mk() compiles

	* Finish dynamic array implementation of group stack

2011-07-28  Charlie Zender  <zender@uci.edu>

	* Embed include <sys/resource.h> within #ifdef HAVE_GETRUSAGE for
	older GNU compilers, e.g., gcc 3.4.x.

2011-07-25  Charlie Zender  <zender@uci.edu>

	* Finished implementing NCO wrappers for group API

	* Group patches read/write (but do not populate) selected groups

	* Group stubs compile, build, and cause no regressions

2011-07-24  Charlie Zender  <zender@uci.edu>

	* Integrate nco_grp_utl.[ch] into build system

	* Revert to using NC_NOFILL on all writes, thus presuming netCDF 4.1.3

	* Add nco_grp_utl.[ch] and get to compile

2011-07-22  Charlie Zender  <zender@uci.edu>

	* Add secret hooks to ncks -g flag for group sub-setting

2011-07-15  Charlie Zender  <zender@uci.edu>

	* Remove last known USE_FORTRAN_ARITHMETIC token

2011-07-14  Charlie Zender  <zender@uci.edu>

	* More clean-up of ncap2 documentation
