@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.444 2011-07-14 18:58:49 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.445 2011-08-23 01:13:00 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.9 are ready. 
 
@@ -27,6 +27,11 @@ Enjoy,
 Charlie
 
 Other "New stuff" in 4.0.9 summary (full details always in ChangeLog):
+
+A. Fix treatment of _FillValue in ncea:
+   When invoked with non-default options such as -y ttl, versions fxm 
+   of ncea could incorrectly handle _FillValue's, including
+   substituting zero in place of the _FillValue.
 
 B. Workaround netCDF NOFILL bug: 
    Abandon NOFILL mode until netCDF 4.1.3 is released.
