@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_var_utl.c,v 1.169 2011-06-28 00:00:47 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_var_utl.c,v 1.170 2011-08-23 01:13:00 zender Exp $ */
 
 /* Purpose: Variable utilities */
 
@@ -880,16 +880,40 @@ var_dfl_set /* [fnc] Set defaults for each member of variable structure */
 } /* end var_dfl_set() */
 
 void 
-var_copy /* [fnc] Copy hyperslab variables of type var_typ from op1 to op2 */
+nco_var_copy /* [fnc] Copy hyperslab variables of type var_typ from op1 to op2 */
 (const nc_type var_typ, /* I [enm] netCDF type */
  const long sz, /* I [nbr] Number of elements to copy */
  const ptr_unn op1, /* I [sct] Values to copy */
  ptr_unn op2) /* O [sct] Destination to copy values to */
 {
   /* Purpose: Copy hyperslab variables of type var_typ from op1 to op2
-     Assumes memory area in op2 has already been malloc()'d */
+     Assumes memory area in op2 has already been malloc()'d
+     nco_var_copy(): Does nothing with missing values and tallies
+     nco_var_copy_tll(): Accounts for missing values in tally */
   (void)memcpy((void *)(op2.vp),(void *)(op1.vp),sz*nco_typ_lng(var_typ));
-} /* end var_copy() */
+} /* end nco_var_copy() */
+
+void 
+nco_var_copy_tll /* [fnc] Copy hyperslab variables of type var_typ from op1 to op2 */
+(const nc_type var_typ, /* I [enm] netCDF type */
+ const long sz, /* I [nbr] Number of elements to copy */
+ const int has_mss_val, /* I [flg] Flag for missing values */
+ ptr_unn mss_val, /* I [val] Value of missing value */
+ long * restrict const tally, /* O [nbr] Counter space */
+ const ptr_unn op1, /* I [sct] Values to copy */
+ ptr_unn op2) /* O [sct] Destination to copy values to */
+{
+  /* Purpose: Copy hyperslab variables of type var_typ from op1 to op2
+     Assumes memory area in op2 has already been malloc()'d
+     Where the value copied is not equal to the missing value, set the tally to one
+     nco_var_copy(): Does nothing with missing values and tallies
+     nco_var_copy_tll(): Accounts for missing values in tally */
+  (void)memcpy((void *)(op2.vp),(void *)(op1.vp),sz*nco_typ_lng(var_typ));
+
+  /* Tally is one if no missing value is defined */
+  if(!has_mss_val) return;
+
+} /* end nco_var_copy_tll() */
 
 void
 nco_var_dfn /* [fnc] Define variables and write their attributes to output file */
